src-tauri/build_log_3.txt
   Compiling sqsh v0.1.0 (C:\Users\me\projects\sqsh\src-tauri)
warning: unused import: `image::GenericImageView`
 --> src\lib.rs:4:5
  |
4 | use image::GenericImageView;
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `sqsh` (lib) generated 1 warning
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `temp_app_lib`
 --> src\main.rs:5:5
  |
5 |     temp_app_lib::run()
  |     ^^^^^^^^^^^^ use of unresolved module or unlinked crate `temp_app_lib`
  |
  = help: if you wanted to use a crate named `temp_app_lib`, use `cargo add temp_app_lib` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `sqsh` (bin "sqsh") due to 1 previous error
